--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "api"
+name = "portfolio"
 version = "0.1.0"
 authors = ["kathleenfrench <kfrench09@gmail.com>"]
 edition = "2018"
@@ -7,3 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "3"
+actix-files = "0.3"
+env_logger = "0.7"
