--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ edition = "2018"
 actix-web = "3"
 actix-files = "0.3"
 env_logger = "0.7"
+actix-http = "2"
+handlebars = { version = "3.0.0", features = ["dir_source"] }
+serde_json = "1.0"
