--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ env_logger = "0.7"
 actix-http = "2"
 handlebars = { version = "3.0.0", features = ["dir_source"] }
 serde_json = "1.0"
+listenfd = "0.3"
