--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "3"
+actix-web = { version = "3", features = ["openssl"] }
 actix-rt = "1.1.1"
 actix-files = "0.3"
 env_logger = "0.7"
@@ -15,3 +15,4 @@ actix-http = "2"
 handlebars = { version = "3.0.0", features = ["dir_source"] }
 serde_json = "1.0"
 listenfd = "0.3"
+openssl = "0.10"
