--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,14 @@ edition = "2018"
 
 [dependencies]
 actix-web = { version = "3", features = ["openssl"] }
+actix-cors = "0.5"
 actix-rt = "1.1.1"
 actix-files = "0.3"
 env_logger = "0.7"
 actix-http = "2"
 handlebars = { version = "3.0.0", features = ["dir_source"] }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 listenfd = "0.3"
 openssl = "0.10"
+futures = "0.3"
