--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,17 +7,18 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = { version = "3", features = ["openssl"] }
 actix-cors = "0.5"
-actix-rt = "1.1.1"
 actix-files = "0.3"
-actix-session = "0.4"
-env_logger = "0.7"
 actix-http = "2"
+actix-rt = "1.1.1"
+actix-session = "0.4"
+actix-web = { version = "3", features = ["openssl"] }
+config = "0.10"
+env_logger = "0.7"
 handlebars = { version = "3.0.0", features = ["dir_source"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+lazy_static = "1.4"
 listenfd = "0.3"
 openssl = "0.10"
-config = "0.10"
-lazy_static = "1.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+structopt = "0.3.7"
