--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,10 @@ actix-rt = "1.1.1"
 actix-session = "0.4"
 actix-web = { version = "3", features = ["openssl"] }
 actix-web-actors = "3"
+anyhow = "1.0.26"
 awc = "2"
+bincode = "1.2.1"
+bytes = "0.5.3"
 config = "0.10"
 env_logger = "0.7"
 futures = "0.3.1"
@@ -25,3 +28,4 @@ openssl = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 structopt = "0.3.7"
+uuid = { version = "0.8.1", features = ["serde", "v4"] }
