--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,14 +18,20 @@ anyhow = "1.0.26"
 awc = "2"
 bincode = "1.2.1"
 bytes = "0.5.3"
+colored = "2"
 config = "0.10"
 env_logger = "0.7"
 futures = "0.3.1"
 handlebars = { version = "3.0.0", features = ["dir_source"] }
 lazy_static = "1.4"
+libc = "0.2.66"
 listenfd = "0.3"
 openssl = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 structopt = "0.3.7"
+tokio = "0.1.22"
+tokio-codec= "0.1.1"
+tokio-io= "0.1.12"
+tokio-pty-process = "0.4"
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
