--- a/web/package.json
+++ b/web/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@swc/cli": "^0.1.27",
-    "@swc/core": "^1.2.38",
-    "chokidar": "^3.4.3",
-    "sass": "^1.29.0"
+    "sass": "^1.29.0",
+    "@wasm-tool/wasm-pack-plugin": "^1.3.1",
+    "webpack": "5.4.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
+    "pterm": "file:pkg",
     "path": "^0.12.7"
   }
 }
