--- a/pterm/Cargo.toml
+++ b/pterm/Cargo.toml
@@ -17,7 +17,7 @@ futures = "0.3"
 humansize = "1"
 humantime = "2"
 instant = { version = "0.1", features = ["now", "wasm-bindgen"] }
-js-sys = "0.3"
+js-sys = "0.3.39"
 lazy_static = "1.4"
 progress_string = "0.1"
 rand = { version = "0.7.0", features = ["wasm-bindgen"] }
@@ -27,6 +27,7 @@ url = "2.2"
 wasm-bindgen = "0.2.69"
 wasm-bindgen-futures = "0.4"
 yansi = "0.5"
+xterm-js-rs = "0.1.1"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 async-std = { version = "1.8", features = ["attributes"] }
@@ -35,5 +36,17 @@ structopt = "0.3"
 term_size = "1.0.0-beta1"
 
 [dependencies.web-sys]
-features = ["Window", "Location", "console"]
+features = [
+  "console",
+  "CssStyleDeclaration",
+  "Document",
+  "Element",
+  "EventTarget",
+  "HtmlDivElement",
+  "HtmlElement",
+  "Location", 
+  "MessageEvent",
+  "Node",
+  "Window", 
+]
 version = "0.3.46"
