--- a/pterm/Cargo.toml
+++ b/pterm/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 anyhow = "1"
+ansi_term = "0.12"
 chrono = { version = "0.4", features = ["wasmbind"] }
 colored = "2"
 console_error_panic_hook = "0.1"
