--- a/pterm/Cargo.toml
+++ b/pterm/Cargo.toml
@@ -27,6 +27,12 @@ regex = "1.4"
 url = "2.2"
 wasm-bindgen = "0.2.69"
 wasm-bindgen-futures = "0.4"
+# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
+# compared to the default allocator's ~10K. It is slower than the default
+# allocator, however.
+#
+# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
+wee_alloc = { version = "0.4.5", optional = true }
 yansi = "0.5"
 xterm-js-rs = "0.1.1"
 
