refactored term method, configured term addon for screen fit

--- a/pterm/Cargo.toml
+++ b/pterm/Cargo.toml
@@ -34,7 +34,7 @@ wasm-bindgen-futures = "0.4"
 # Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
 wee_alloc = { version = "0.4.5", optional = true }
 yansi = "0.5"
-xterm-js-rs = "0.1.1"
+xterm-js-rs = { version = "0.1.1", features = ["xterm-addon-fit"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 async-std = { version = "1.8", features = ["attributes"] }
