--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "pterm": "file:pkg",
     "path": "^0.12.7",
-    "xterm": "^4.5.0"
+    "xterm": "^4.5.0",
+    "xterm-addon-fit": "^0.3.0"
   }
 }
