--- a/web/package.json
+++ b/web/package.json
@@ -4,14 +4,13 @@
   "description": "",
   "main": "src/main.js",
   "scripts": {
-    "css": "sass ./scss/style.scss ../static/assets/css/main.css --style compressed --no-source-map",
-    "css-watch": "sass ./scss/style.scss ../static/assets/css/main.css --style compressed --no-source-map --watch",
     "build": "webpack --config webpack.config.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "sass": "^1.29.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.3",
     "@wasm-tool/wasm-pack-plugin": "^1.3.1",
     "webpack": "5.4.0",
     "webpack-cli": "^3.1.0",
