--- a/pterm/Cargo.toml
+++ b/pterm/Cargo.toml
@@ -24,6 +24,8 @@ progress_string = "0.1"
 rand = { version = "0.7.0", features = ["wasm-bindgen"] }
 rand_distr = "0.3.0"
 regex = "1.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 url = "2.2"
 wasm-bindgen = "0.2.69"
 wasm-bindgen-futures = "0.4"
@@ -54,6 +56,7 @@ features = [
   "Location", 
   "MessageEvent",
   "Node",
+  "Storage",
   "Window", 
 ]
 version = "0.3.46"
