--- a/config/Dev.yml
+++ b/config/Dev.yml
@@ -2,6 +2,6 @@ log:
   level: "debug"
 
 server:
-  full_url: "https://127.0.0.1:3000"
+  full_url: "http://127.0.0.1:3000"
   hostname: "127.0.0.1"
   port: 3000
