--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "npm": "6.14.7"
   },
   "scripts": {
+    "heroku-prebuild": "./wasm_env.sh",
     "build": "webpack --config webpack.config.js"
   },
   "author": "",
