deploy app to heroku (#26)
* add buildpacks
* rm ssl struct value
* shift port parse to set in main.rs
* use 0.0.0.0 as prod host
* include pterm lib in web directory
* add wasm buildpack
* update readme and add a dockerfile for the rust server for next iteration of heroku deploys

--- a/config/Prod.yml
+++ b/config/Prod.yml
@@ -1,4 +1,5 @@
+log:
+  level: "debug"
+
 server:
-  full_url: "https://www.kathleenfrench.co"
-  hostname: "www.kathleenfrench.co"
-  port: 80
+  host: "0.0.0.0"
