--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/main.js",
+  "engines": {
+    "node": "14.9.0",
+    "npm": "6.14.7"
+  },
   "scripts": {
     "build": "webpack --config webpack.config.js"
   },
@@ -17,7 +21,6 @@
     "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
-    "pterm": "file:pkg",
     "path": "^0.12.7",
     "xterm": "^4.5.0",
     "xterm-addon-fit": "^0.3.0"
