--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,8 @@
     "npm": "6.14.7"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "release": "webpack --config webpack.docker.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,8 +18,7 @@
     "copy-webpack-plugin": "^5.0.3",
     "@wasm-tool/wasm-pack-plugin": "^1.3.1",
     "webpack": "5.4.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack-cli": "^3.1.0"
   },
   "dependencies": {
     "path": "^0.12.7",
