--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,8 @@ version: "3"
 services:
   web:
     build:
-      context: build/docker
-      dockerfile: Dockerfile.local
+      context: .
+      dockerfile: build/docker/Dockerfile.local
     environment: 
       ENVIRONMENT: Prod
       PORT: 3000
