--- a/web/package.json
+++ b/web/package.json
@@ -14,15 +14,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "clean-webpack-plugin": "^3.0.0",
+    "@vue/preload-webpack-plugin": "^2.0.0",
+    "@wasm-tool/wasm-pack-plugin": "^1.6.0",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^5.0.3",
-    "@wasm-tool/wasm-pack-plugin": "^1.3.1",
-    "webpack": "5.4.0",
-    "webpack-cli": "^3.1.0"
+    "html-webpack-plugin": "^5.3.2",
+    "webpack": "5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "path": "^0.12.7",
     "xterm": "^4.5.0",
     "xterm-addon-fit": "^0.3.0"
+  },
+  "volta": {
+    "node": "14.9.0",
+    "npm": "6.14.7"
   }
 }
