--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,5 +1,10 @@
-on: [push]
 name: CI
+on:
+  push:
+    branches-ignore:
+    - 'master'
+    paths:
+    - 'src/**.rs'
 
 jobs:
   build_and_test:
