--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,8 @@ lazy_static = "1.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 structopt = "0.3.7"
+
+[dev-dependencies]
+linked-hash-map = "0.5.3"
+crossbeam-utils = "0.8.7"
+tokio = "1.8.4"
