--- a/web/package.json
+++ b/web/package.json
@@ -20,7 +20,8 @@
     "copy-webpack-plugin": "^5.0.3",
     "html-webpack-plugin": "^5.3.2",
     "webpack": "5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "glob-parent": ">=5.1.2"
   },
   "dependencies": {
     "path": "^0.12.7",
