--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "portfolio"
 version = "0.1.0"
-authors = ["kathleenfrench <kfrench09@gmail.com>"]
+authors = ["kathleenfrench <kfrench.eng@gmail.com>"]
 edition = "2021"
 
 [[bin]]
