--- a/web/pterm/Cargo.toml
+++ b/web/pterm/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "pterm"
 version = "0.1.0"
-authors = ["kathleenfrench <kfrench09@gmail.com>"]
+authors = ["kathleenfrench <kfrench.eng@gmail.com>"]
 edition = "2018"
 
 [lib]
